syntax = "proto3";
package grpc.parcel_scan;

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "svc-storage-grpc-geo_types.proto";
import "svc-storage-grpc.proto";

// Response struct returning an [Object] on success and [ValidationResult] if invalid fields were provided
message Response {
    // struct with field -> error pairs to provide feedback about invalid fields
    grpc.ValidationResult validation_result = 1;
    // Object struct with id [`String`] in [`Uuid`](lib_common::uuid::Uuid) format and [`Data`] struct with parcel data
    optional Object object = 2;
}

// Object struct with `id` and `data` field
// * `id` [`String`] in [`Uuid`](lib_common::uuid::Uuid) format
// * `data` [`Data`] struct with parcel scan data
message Object {
    //id UUID v4
    string id = 1;
    //data
    Data data = 2;
}

// UpdateObject struct with `id`, `data` and `mask` fields
// * `id` [`String`] in [`Uuid`](lib_common::uuid::Uuid) format
// * `data` [`Data`] struct with parcel scan data which should be used for update
// * `mask` [`FieldMask`] struct with parcel scan fields that should be updated
message UpdateObject {
    // `id` [`String`] in [`Uuid`](lib_common::uuid::Uuid) format
    string id = 1;
    // struct with parcel scan data which should be used for update
    Data data = 2;
    // struct with parcel scan fields that should be updated
    google.protobuf.FieldMask mask = 3;
}


// Data struct with parcel data
message Data {
    // the parcel UUID associated with the parcel
    string parcel_id = 1;

    // the UUID of the scanner (could be a person, a vehicle, etc.)
    string scanner_id = 2;

    // geographical location of the vertiport
    grpc.geo_types.GeoPoint geo_location = 3;

    // the time the parcel was scanned
    google.protobuf.Timestamp created_at = 4;
}

// Struct containing a `list` of parcel scan [Vec\<Object\>]
message List {
    // array/vector of parcel scan items
    repeated Object list = 1;
}
